--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,6 @@
 }
 .shade{
         
-        text-shadow: 2px 2px 4px aqua, 0 0 25px wheat, 0 0 5px whitesmoke;
         padding: 10px ;
         color: gold;
         margin: auto auto 10px auto;        
@@ -13,8 +12,7 @@
   width: 30px;
 }
 .shade2{
-  color: rebeccapurple;
-  text-shadow: 4px 4px 8px #000000;
+  color: white;
   padding: 10px ;
   margin: 80px auto auto auto;
 }
